<resources>
    <string name="app_name">Get-It-Done!</string>
    <string name="register">Register</string>
    <string name="number">Number</string>
    <string name="today">Today</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">Username</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="numeric_password"><font fgcolor='#FFFFFFFF'> Numeric Password</font></string>
    <string name="welcome">Welcome</string>
    <string name="due">Due:</string>
    <string name="date_of_completion_n_a">Date of Completion: N/A</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="date">Date</string>
    <string name="my_task">My Task</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_id">your-id</string>
    <string name="home">Home</string>

    <string-array name="am_array">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string name="channel_description">Reminder</string>
    <string name="channel_name">Reminder</string>
    <string name="user">User</string>
    <string name="textview">TextView</string>
    <string name="task">Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_due">Task Due:</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="add">Add</string>
    <string name="minute">Minute</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="description">Description</string>


</resources>
