<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_next"

    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="36dp"
        android:text="@string/registration"

        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/firstName_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstName_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:text="@string/first_name"

        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/idView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/dateText_reg"
        android:layout_width="54dp"
        android:layout_height="29dp"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="96dp"
        android:text="@string/date"

        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password_reg"
        app:layout_constraintEnd_toStartOf="@+id/date_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_reg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/date_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="52dp"
        android:layout_marginEnd="181dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="43dp"
        android:text="@string/today"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateText_reg"
        app:layout_constraintTop_toBottomOf="@+id/idView" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/numeric_password"
        android:inputType="numberPassword"

        android:text="@string/number"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_reg" />

    <TextView
        android:id="@+id/numeric_reg"
        android:layout_width="204dp"
        android:layout_height="30dp"
        android:layout_marginBottom="37dp"
        android:layout_marginTop="32dp"
        android:text="@string/numeric_password"
        android:textColor="@android:color/background_light"

        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/register_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <Button
        android:id="@+id/register_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="148dp"

        android:layout_marginStart="148dp"
        android:background="#ff5c33"
        android:text="@string/register"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeric_reg"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/idView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="29dp"
        android:text="@string/your_id"
        android:textColor="@android:color/background_light"

        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dateText_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_reg"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="30dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:background="#ff5c33"
        android:text="@string/home"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/firstName_reg"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="13dp"

        android:layout_marginStart="132dp"
        android:layout_marginTop="29dp"
        android:text="ID:"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password_reg"
        app:layout_constraintEnd_toStartOf="@+id/idView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_reg" />
</android.support.constraint.ConstraintLayout>