<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_next"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/editTask_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="27dp"
        android:text="@string/task"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/name_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"

        android:text="@string/task_name"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTask_add" />

    <TextView
        android:id="@+id/id_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"

        android:text="Id_Number"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"

        android:background="#ff5c33"
        android:elevation="2dp"
        android:text="@string/add"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/detail_add"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="103dp"
        android:layout_marginEnd="125dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_time_add" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="224dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/task_due"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/due_date_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="328dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/due_date_add"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="55dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Due_date"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/alert_time_add"
        app:layout_constraintEnd_toStartOf="@+id/set_date_add"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/set_date_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="56dp"
        android:layout_marginStart="8dp"
        android:background="#ff5c33"
        android:text="Set Date"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/set_Time_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/alert_time_add"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/alert_time_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="23dp"
        android:text="Alert Time"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_add"
        app:layout_constraintEnd_toStartOf="@+id/set_Time_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_date_add" />

    <Button
        android:id="@+id/set_Time_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="56dp"
        android:background="#ff5c33"
        android:text="Set Time"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/detail_add"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>